# mp3rgainpy

./: .gitignore  Cargo.toml  README.md  m4again.pyi  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
mp3rgainpy/: __init__.py
native-helper/: Cargo.toml
native-helper/src/: python.rs
src/: lib.rs  python.rs
tests/: test_python_bindings.py
