[package]
name = "m4again"
version = "0.0.1"
edition = "2021"

[lib]
name = "m4again"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
mp3rgain = { version = "=2.0.4", default-features = false, features = ["aac"] }
pyo3 = { version = "0.27.2", optional = true, features = ["abi3-py39"] }
