[package]
name = "mp3rgainpy"
version = "0.0.2"
edition = "2021"

[lib]
name = "mp3rgainpy"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
mp3rgain = { version = "=2.2.3", default-features = false, features = ["aac"] }
pyo3 = { version = "0.27.2", optional = true, features = ["abi3-py39"] }
