[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "mp3rgainpy"
version = "0.0.1"
description = "PyO3 bindings for MP3 and AAC/M4A gain adjustment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.maturin]
manifest-path = "native-helper/Cargo.toml"
features = ["python"]
module-name = "mp3rgainpy._native"
python-packages = ["mp3rgainpy"]
